--- a/src/09/code/connect4.html
+++ b/src/09/code/connect4.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  
+  <button id="newGame">New Game</button>
+  <p>Next player: <strong id="nextPlayerTurn"></strong></p>
 
   <div class="board"></div>
 
