--- a/src/11/code/public/connect4.html
+++ b/src/11/code/public/connect4.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vier gewinnt</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="render-sjdon.js"></script>
   <script src="connect4-winner.js"></script>
   <script src="connect4.js"></script>
 </head>
