lab 11 t2 localStorage & modul export disabled

--- a/src/11/code/public/connect4.html
+++ b/src/11/code/public/connect4.html
@@ -19,6 +19,8 @@
     <p>Next player: <strong id="nextPlayerTurn"></strong></p>
     <button onclick="loadState()">Load</button>
     <button onclick="saveState()">Save</button>
+    <button id="loadStateServer" onclick="loadStateServer()" hidden>Load from Server</button>
+    <button id="saveStateServer"onclick="saveStateServer()" hidden>Save to Server</button>
     <button onclick="newGame()">New Game</button>
   </div>
 
