--- a/src/12/code/public/connect4.html
+++ b/src/12/code/public/connect4.html
@@ -6,25 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vier gewinnt</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="render-sjdon.js"></script>
-  <script src="connect4-winner.js"></script>
-  <script src="connect4.js"></script>
 </head>
 
 <body>
 
-  <div class="board"></div>
+  <div class="app"></div>
 
-  <div class="controls">
-    <p>Next player: <strong id="nextPlayerTurn"></strong></p>
-    <button onclick="loadState()">Load</button>
-    <button onclick="saveState()">Save</button>
-    <button id="loadStateServer" onclick="loadStateServer()" hidden>Load from Server</button>
-    <button id="saveStateServer"onclick="saveStateServer()" hidden>Save to Server</button>
-    <button onclick="newGame()">New Game</button>
-  </div>
-
-  <script>
+  <script type="module">
+    import { initGame } from './connect4.js'
     initGame()
   </script>
 
